# pixelforge

./: .gitignore  Dockerfile  Dockerfile-frontend-simple  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  main.py  pyproject.toml  requirements-basic.txt  requirements.txt
backend/src/api/: app.py
backend/src/core/: config.py
backend/src/core/tools/: base.py
backend/src/core/tools/basic/: crop.py  format_convert.py  resize.py
frontend/: Dockerfile  Dockerfile-simple  next.config.ts  package-lock.json
frontend/app.bak/: globals.css  page.tsx
frontend/public/: editor.html
